Improved spacing around articles. * Ensured that link hit areas were large enough for mobile.

--- a/src/css/style-global.css
+++ b/src/css/style-global.css
@@ -2,15 +2,13 @@
  * Global styles
  */
 
- /**
-  * Global font
-  */
-body {
-  font-family: 'Montserrat', sans-serif;
-}
 
 html {
-  min-height: 100%
+   min-height: 100%
+ }
+
+body {
+  font-family: 'Montserrat', sans-serif;
 }
 
 body {
@@ -18,6 +16,11 @@ body {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
+}
+
+a {
+  min-width: 48px;
+  min-height: 48px;
 }
 
 /**
@@ -95,8 +98,15 @@ section .masthead span {
  * Portfolio section
  */
 #portfolio {
+  /* enable flexbox */
+  display: -webkit-flex;
+  display: -ms-flex;
   display: flex;
+  /* layout as rows */
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
   flex-direction: row;
+  /* wrap flex rows */
   flex-wrap: wrap;
 }
 
@@ -110,6 +120,7 @@ section .masthead span {
   /* ensure image resizes */
   width: 100%;
   height: 100%;
+  /* don't let image get too large */
   max-width: 300px;
   max-height: 188px;
 }
@@ -131,6 +142,9 @@ section .masthead span {
 }
 
 article {
-  /** allow visually pleasing separation when articles stack */
+  /** allow visually pleasing separation when articles stack vertically */
   margin-top: 10px;
+  /** allow visually pleasing separation when articles stack horizontally */
+  margin-left: 10px;
+  margin-right: 10px;
 }
